samples/_failures_safe/1761485266_71ab38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ad417c5.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_5ad417c5.c:138: error: expected ‘{’ at end of input
